# kyrene

./: Cargo.toml  LICENSE-MIT
crates/kyrene-3d/: Cargo.toml
crates/kyrene-3d/src/: camera.rs  geom.rs  lib.rs  material.rs  mesh.rs
crates/kyrene-asset/: Cargo.toml
crates/kyrene-asset/src/: lib.rs
crates/kyrene-core/: Cargo.toml
crates/kyrene-core/src/: access.rs  bundle.rs  component.rs  entity.rs  event.rs  handler.rs  intern.rs  lib.rs  loan.rs  lock.rs  plugin.rs  query.rs  resource.rs  util.rs  world.rs  world_handle.rs  world_view.rs
crates/kyrene-core/src/event/: handler.rs
crates/kyrene-graphics/: Cargo.toml
crates/kyrene-graphics/src/: bind_group.rs  buffer.rs  camera.rs  clear_color.rs  color.rs  hdr.rs  hdr.wgsl  lib.rs  pipeline.rs  texture.rs  window.rs
crates/kyrene-macro/: Cargo.toml
crates/kyrene-macro/src/: lib.rs
crates/kyrene-util/: Cargo.toml
crates/kyrene-wgpu/: Cargo.toml
crates/kyrene-wgpu/src/: lib.rs  texture.rs
crates/kyrene-winit/: Cargo.toml
crates/kyrene-winit/src/: lib.rs
examples/: demo.rs
src/: lib.rs
