[package]
name = "kyrene"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
kyrene-core = { path = "crates/kyrene-core" }
kyrene-macro = { path = "crates/kyrene-macro" }
kyrene-graphics = { path = "crates/kyrene-graphics" }
kyrene-3d = { path = "crates/kyrene-3d" }

[[example]]
name = "demo"
path = "examples/demo.rs"
