[package]
name = "kyrene-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
kyrene-core = { path = "../kyrene-core" }
kyrene-graphics = { path = "../kyrene-graphics" }
kyrene-asset = { path = "../kyrene-asset" }
glam = { version = "0.29", features = ["bytemuck"] }
encase = { version = "0.10", features = ["glam"] }
tobj = "4.0.2"
