[package]
name = "kyrene-core"
version = "0.1.0"
edition = "2021"

[dependencies]
downcast-rs = "2.0"
tokio = { version = "1.43", features = ["full", "tracing"] }
log = "0.4.22"
futures = "0.3.31"
async-trait = "0.1.85"
hashbrown = "0.15.2"
rustc-hash = "2.1.0"
pollster = "0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"
itertools = "0.14.0"
async_fn_traits = "0.1.1"
