[package]
name = "kyrene-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
kyrene-core = { path = "../kyrene-core" }
kyrene-asset = { path = "../kyrene-asset" }
winit = "0.30.8"
wgpu = "24.0"
glam = { version = "0.29", features = ["bytemuck"] }
encase = { version = "0.10", features = ["glam"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"
image = "0.25.5"
